--- a/main.css
+++ b/main.css
@@ -4,6 +4,6 @@ h3 {background-color: yellow; font-style: italic; line-height: 5; word-spacing: 
 p {color: #2955a8; font-variant: small-caps;}
 ul {background-color: #9bceee; letter-spacing: 0.075em;}
 ol {color: lightgray; background-color: hsl(0,0%,100%); letter-spacing: 0.075em;}
-body {background-color: hsl(303, 85%, 34%);}
+body {background-color: hsla(303, 85%, 34%, 1);}
 em {text-transform: uppercase;}
 strong {text-shadow: 1px 1px 3px #f9b8f6;}
